--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Calle Malmz <callem217@gmail.com>"]
 
 [dependencies]
 rlibc="1.0.0"
+spin = "0.4.5"
+volatile = "0.2.3"
+multiboot2 = "0.3.2"
 
 [lib]
 crate-type=["staticlib"]
